# sphone

./: .anjuta_sym_db.db  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO.tasks  configure.ac
icons/: Makefile.am
samples/: call.sh  ringing.sh  sms.sh  sphone.conf.rhodium
samples/ringtones/: LICENSE  README
src/: Makefile.am  book-import.c  book-import.h  callbacks.c  callbacks.h  dbus-marshalers.c  dbus-marshalers.h  econtacts.c  gui-calls-manager.c  gui-calls-manager.h  gui-contact-view.c  gui-contact-view.h  gui-dialer.c  gui-dialer.h  gui-options.c  gui-options.h  gui-sms.c  gui-sms.h  keypad.c  keypad.h  keys-grab.c  keys-grab.h  main.c  notification.c  notification.h  ofono.c  ofono.h  proximity.c  proximity.h  sphone-call.c  sphone-call.h  sphone-manager.c  sphone-manager.h  sphone-store-tree-model.c  sphone-store-tree-model.h  sphone.glade  store.c  store.h  utils.c  utils.h
