
icons_DATA = \
	contact-person-unknown.png\
	missed_call.png \
	network-strength-0.png \
	network-strength-1.png \
	network-strength-2.png \
	network-strength-3.png \
	network-strength-4.png \
	network-strength-none.png \
	network-technology-3G.png \
	network-technology-E.png \
	network-technology-GSM.png \
	network-technology-H.png \
	network-technology-none.png \
	network-technology-U.png \
	sms.png \
	voice.png \
	contact-person.png \
	network-roaming-strength-0.png \
	network-roaming-strength-1.png \
	network-roaming-strength-2.png \
	network-roaming-strength-3.png \
	network-roaming-strength-4.png \
	network-strength-searching.png

iconsdir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(icons_DATA)

## File created by the gnome-build tools

